fixing z-index of nav bar

--- a/src/shop_page/css/shopStyle.css
+++ b/src/shop_page/css/shopStyle.css
@@ -1017,6 +1017,7 @@ div.sku strong{
 
 .nav {
     position: fixed;
+	z-index: 4;
     bottom: 0;
     width: 100%;
     height: 55px;
